--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -175,11 +175,24 @@
     <Compile Include="Migrations\202205041821398_InitialModel.designer.cs">
       <DependentUpon>202205041821398_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202205042056299_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\202205042056299_AddIsSubscribedToCustomer.designer.cs">
+      <DependentUpon>202205042056299_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205042100125_AddMembershipType.cs" />
+    <Compile Include="Migrations\202205042100125_AddMembershipType.designer.cs">
+      <DependentUpon>202205042100125_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205042101549_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\202205042101549_PopulateMembershipTypes.designer.cs">
+      <DependentUpon>202205042101549_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -262,6 +275,15 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202205041821398_InitialModel.resx">
       <DependentUpon>202205041821398_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205042056299_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>202205042056299_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205042100125_AddMembershipType.resx">
+      <DependentUpon>202205042100125_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205042101549_PopulateMembershipTypes.resx">
+      <DependentUpon>202205042101549_PopulateMembershipTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
