--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -187,6 +187,10 @@
     <Compile Include="Migrations\202205042101549_PopulateMembershipTypes.designer.cs">
       <DependentUpon>202205042101549_PopulateMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202205042110579_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\202205042110579_ApplyAnnotationsToCustomerName.designer.cs">
+      <DependentUpon>202205042110579_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -284,6 +288,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202205042101549_PopulateMembershipTypes.resx">
       <DependentUpon>202205042101549_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205042110579_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>202205042110579_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
