--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -191,6 +191,14 @@
     <Compile Include="Migrations\202205042110579_ApplyAnnotationsToCustomerName.designer.cs">
       <DependentUpon>202205042110579_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202205051852598_AddMembershipName.cs" />
+    <Compile Include="Migrations\202205051852598_AddMembershipName.designer.cs">
+      <DependentUpon>202205051852598_AddMembershipName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205051854014_PopulateMembershipName.cs" />
+    <Compile Include="Migrations\202205051854014_PopulateMembershipName.designer.cs">
+      <DependentUpon>202205051854014_PopulateMembershipName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -291,6 +299,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202205042110579_ApplyAnnotationsToCustomerName.resx">
       <DependentUpon>202205042110579_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205051852598_AddMembershipName.resx">
+      <DependentUpon>202205051852598_AddMembershipName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205051854014_PopulateMembershipName.resx">
+      <DependentUpon>202205051854014_PopulateMembershipName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
